Improve compilerArgs.